# awesome-bloom-filters

./: .gitignore  CMakeLists.txt  README.md
datasets/: prepare.cc
include/: filter_policy.h  hash.h
log/: draw_test.py  drwa_data.py
src/: CMakeLists.txt  bloom_filter.cc  hash.cc  imp_shifting_bf.cc  shifting_bf.cc  spatial_bf.cc
test/: CMakeLists.txt  hash_test.cc  main.cc
